--- a/gb/23/11/30/n14127029.md
+++ b/gb/23/11/30/n14127029.md
@@ -1,34 +1,34 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>如何在职场中建立良好关系？ 专家教你10招</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2016/12/Fotolia_53703912_Subscription_L-600x400.jpg" />
 <h6>有专家提供了如何在职场中建立良好关系的秘诀。（Fotolia）
 </h6>
 <hr>
-	<p>【大纪元2023年11月30日讯】（大纪元记者陈俊村报导）在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%81%8C%E5%9C%BA.md#1">职场</a>中建立良好关系会带来工作和个人两方面的众多益处，但很多人觉得这很困难。有专家分享了如何建立良好关系的几个秘诀，其中包括改善沟通技巧和表达感谢之意等，值得人们学习。</p>
-<p>“女性崛起”（Women Rising）项目创始人暨执行长达拉-卡米娜（Megan Dalla-Camina）在今日心理学（Psychology Today）网站撰文说，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%81%8C%E5%9C%BA.md#1">职场</a>中的强健关系不但有助于营造谐和的工作环境，对个人和企业的成功也扮演重要的角色。</p>
+	<p>【大纪元2023年11月30日讯】（大纪元记者陈俊村报导）在职场中建立良好关系会带来工作和个人两方面的众多益处，但很多人觉得这很困难。有专家分享了如何建立良好关系的几个秘诀，其中包括改善沟通技巧和表达感谢之意等，值得人们学习。</p>
+<p>“女性崛起”（Women Rising）项目创始人暨执行长达拉-卡米娜（Megan Dalla-Camina）在今日心理学（Psychology Today）网站撰文说，职场中的强健关系不但有助于营造谐和的工作环境，对个人和企业的成功也扮演重要的角色。</p>
 <p>达拉-卡米娜写道，依据他们针对超过1,200名女性所进行的研究，受访者认为在职场中最需要做好的一件事就是与主管建立良好关系。</p>
 <p>她提到了在职场中建立正面关系的重要性。其益处包括强化同事之间的合作、增加工作满意度、提高职涯中的晋升机会、降低压力、让工作更有意义等。</p>
 <p>针对如何建立良好关系，她分享了10个方法，如以下所述：</p>
 <h2>●建立互信</h2>
 <p>任何强健的关系都需要信任来维持。要当个可靠的人，履行诺言，而且在有需要时保守秘密。信任的建立需要时间，但却很容易被侵蚀，所以要小心为之。</p>
-<h2>●要有<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%90%8C%E7%90%86%E5%BF%83.md#1">同理心</a></h2>
-<p>对同事展现<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%90%8C%E7%90%86%E5%BF%83.md#1">同理心</a>。试着了解他们的观点和感觉，尤其是在困难的情况下。这可以创造互助的氛围，让人们感到自己受到重视。</p>
-<figure id="attachment_11967303" aria-describedby="caption-attachment-11967303" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/03/Fotolia_1-e1584974216962.jpg"><img class="size-large wp-image-11967303" src="https://i.epochtimes.com/assets/uploads/2020/03/Fotolia_1-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-11967303" class="wp-caption-text">同事之间在对话。（Fotolia）</figcaption></figure>
+<h2>●要有同理心</h2>
+<p>对同事展现同理心。试着了解他们的观点和感觉，尤其是在困难的情况下。这可以创造互助的氛围，让人们感到自己受到重视。</p>
+<figure id="attachment_11967303" aria-describedby="caption-attachment-11967303" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/03/Fotolia_1-e1584974216962.jpg"><img decoding="async" class="size-large wp-image-11967303" src="https://i.epochtimes.com/assets/uploads/2020/03/Fotolia_1-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-11967303" class="wp-caption-text">同事之间在对话。（Fotolia）</figcaption></figure>
 <h2>●使用有效的沟通方式</h2>
 <p>沟通是任何正面关系的基础。采取主动倾听，要求反馈，并对他人的反馈抱持开放的态度。尽力做好明确和有礼的沟通，避免做出假设。</p>
 <h2>●表达谢意</h2>
 <p>表达感激和欣赏之意对建立正面关系很有帮助。要公开和私下都认可同事的贡献与成就。</p>
-<h2>●改善解决<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%86%B2%E7%AA%81.md#1">冲突</a>的方法</h2>
-<p>在任何工作场所，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%86%B2%E7%AA%81.md#1">冲突</a>都是无法避免的，但如何解决冲突会决定双方关系的健康程度。冷静和专业地解决冲突，专注于寻求解决之道，而不要归咎他人。</p>
+<h2>●改善解决冲突的方法</h2>
+<p>在任何工作场所，冲突都是无法避免的，但如何解决冲突会决定双方关系的健康程度。冷静和专业地解决冲突，专注于寻求解决之道，而不要归咎他人。</p>
 <h2>●当个团队成员</h2>
 <p>积极参与团体活动，提供协助，而且要乐于合作。当个团队成员的心态能展现你致力于取得团体的整体成功之承诺。</p>
 <h2>●参与师徒制</h2>
 <p>寻求导师指点或担任别人的导师。师徒制对于师徒双方而言，都能提供导引和鼓励，并促进个人成长。</p>
-<h2>●拓展<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BA%BA%E8%84%89.md#1">人脉</a></h2>
-<p>在公司内外扩展<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BA%BA%E9%99%85%E5%85%B3%E7%B3%BB.md#1">人际关系</a>网路。你可以参加业界活动和专业组织，并在领英（LinkedIn）之类的社交媒体上与同事互动。人际网路能造就珍贵的关系和机会。</p>
-<figure id="attachment_14127038" aria-describedby="caption-attachment-14127038" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/11/id14127038-shutterstock_1209568675.jpg"><img class="size-large wp-image-14127038" src="https://i.epochtimes.com/assets/uploads/2023/11/id14127038-shutterstock_1209568675-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14127038" class="wp-caption-text">职场中的良好关系有多项益处。（Shutterstock）</figcaption></figure>
+<h2>●拓展人脉</h2>
+<p>在公司内外扩展人际关系网路。你可以参加业界活动和专业组织，并在领英（LinkedIn）之类的社交媒体上与同事互动。人际网路能造就珍贵的关系和机会。</p>
+<figure id="attachment_14127038" aria-describedby="caption-attachment-14127038" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/11/id14127038-shutterstock_1209568675.jpg"><img decoding="async" class="size-large wp-image-14127038" src="https://i.epochtimes.com/assets/uploads/2023/11/id14127038-shutterstock_1209568675-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14127038" class="wp-caption-text">职场中的良好关系有多项益处。（Shutterstock）</figcaption></figure>
 <h2>●平衡个人与职涯生活</h2>
 <p>尽管建立关系很重要，但在个人与职涯生活之间取得健康的平衡也很重要。你要设定自己的工作范围，也要尊重同事的工作范围。</p>
 <h2>●不断学习</h2>
@@ -38,45 +38,32 @@
 <p>责任编辑：茉莉</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/10/n14113329.md#1">加拿大过去10年房贷月供增幅 超房价涨幅</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/17/n14118011.md#1">道银：料加拿大房市年内回落 明春回升</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/19/n14119812.md#1">加拿大政府将出台报税新规 短租房东将受打击</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122142.md#1">摘牌下市房屋增多 多伦多进一步走向买方市场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/30/n14126830.md#1">地产公司预测：明年大多伦多房价下行 买家受益</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/30/n14126835.md#1">10月大多伦多地区新公寓销量创10年新低</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/30/n14126768.md#1">大多伦多房市大势不妙 银行拍卖屋越来越多</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/30/n14126806.md#1">开发商涨费用 加国夫妇弃新屋 赔14万定金</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/30/n14126805.md#1">养老金不足 反向房屋贷款究竟好不好？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122145.md#1">房市放缓如何做好卖房准备？卖家必看清单</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/16/n13931079.md#1">有错就道歉吧！别让这4种毒素破坏人际关系</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/20/n13933819.md#1">想改善人际关系？关注这点妥善沟通更加分</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/1/n14085955.md#1">道歉要懂方法 如何打好职场人际关系？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105767.md#1">说话考量别人的感受 能促进职场好人缘</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/16/n13931079.md#1">有错就道歉吧！别让这4种毒素破坏人际关系</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/20/n13933819.md#1">想改善人际关系？关注这点妥善沟通更加分</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/1/n14085955.md#1">道歉要懂方法 如何打好职场人际关系？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/30/n14105767.md#1">说话考量别人的感受 能促进职场好人缘</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/12/4/n9922246.md#1" target="_blank">林辉：文革冤案中周恩来的落井下石与冷酷</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/16/4/29/n7787098.md#1" target="_blank">81岁病危老人一夜之间病好了</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/25/n10666303.md#1" target="_blank">观雨堂主：大陆高校的“秘密信息员”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/15/n10977742.md#1" target="_blank">伊朗姑娘嘉扎尔?塔瓦纳艾(2) 历练的旅程</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/20/n14120496.md#1">隐藏500年 米开朗基罗人体素描密室对外开放</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/24/n14123474.md#1">【未解之谜】诸葛八阵图之谜（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14120801.md#1">【古道人生】一个乞讨要饭的女子成了大国夫人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122398.md#1">吴王夫差亡国有预兆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/24/n14123533.md#1">不只有青梅竹马 藏在长干里的爱情故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/30/n14127426.md#1">【秦鹏观察】“老朋友”撒手 全球亲共时代逝去</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/30/n14127034.md#1">【晚间新闻】突发：基辛格去世 终年100岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/30/n14127314.md#1">【净园财经】不顾经济利益和道义 中共挺哈马斯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/29/n14126444.md#1">岳山：政协会讨论房地产 王沪宁表现异常</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/28/n14125935.md#1">王友群：公安部长王小洪正站在悬崖边上</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/29/n14126593.md#1">中国餐饮业倒闭潮来袭 商圈旺铺转让难</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/29/n14126632.md#1">从头晕到离世不到40分钟 庄群施死因曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/27/n14125331.md#1">中共封杀下 黄骥执导《石门》获金马最佳影片</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/28/n14125982.md#1">朱丹自曝被好友骗光积蓄 教训出自在纸上签字</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/29/n14126729.md#1">TVB官方祝贺李佳芯生日 一句话引网民炮轰</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/28/n14125997.md#1">连续5年亏损 香港TVB宣布再裁300人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/26/n14124659.md#1">天冷来一碗 味噌汤防癌减肥 这时间喝好处更多</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/22/n14121481.md#1">有口臭？可能是身体在求救 中医4方法除口臭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121266.md#1">健脑不光有核桃 12类终极食物补脑防失智</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/27/n14125127.md#1">日本科学家成功研制新药 可刺激新牙生长</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/28/n14125590.md#1">人真的会笑死吗？ 医生这么说</a></li>
-<hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/11/30/n14127029.htm">如何在职场中建立良好关系？ 专家教你10招</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/11/30/n14127029.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405103.md#1">稀奇古怪的转生故事二则：人未死魂已转生猪 死后变猪又回到人身</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414547.md#1">前美军特种兵曝曾在地下设施见过外星科技</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/2/6/n12737786.md#1">【元曲大家】江南才子徐再思 写尽相思意</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14399999.md#1">郑板桥教子</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/10/n14410373.md#1">第五面墙：三位意大利天顶壁画家的杰作欣赏</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418423.md#1">【舞蹈】飞天艺术学院2024第二学期舞蹈考试（高班 女生）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416537.md#1">【净园财经】阿根廷奇迹 中国的米莱在哪里？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416610.md#1">【菁英论坛】TikTok生死时刻 中美数字战开打</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/19/n14416856.md#1">中芯甩卖28纳米芯片 分析：或为驱动“内循环”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/19/n14416718.md#1">泰缅边境失联模特杨泽琪获救 指甲被拔引关注</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416239.md#1">川普就职前和习通话释何信号 专家解析</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14416015.md#1">港片在大陆市场连连失利 谢霆锋转向开演唱会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14415967.md#1">3个女儿同时发烧住院输液 谢娜自曝情绪崩溃</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416567.md#1">传洛杉矶豪宅被损毁 央视名导张纪中赴美处理</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416632.md#1">扛不起天价违约金？赵露思休养不足一月复工</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412855.md#1">自我诊断和改善 摆脱睡眠呼吸中止症</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/10/n14410842.md#1">人偏肺病毒感染高发 病毒专家教你怎样应对</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/11/n14410940.md#1">食物与心灵存在秘密连结 吃对了情绪才好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416095.md#1">【车评】拥有STI灵魂的跑车 2025 Subaru WRX tS</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14412910.md#1">高血压患者的急救、养生、茶饮及运动</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/11/30/n14127029.htm">如何在职场中建立良好关系？ 专家教你10招</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/11/30/n14127029.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
